# gym-trainer-backend

./: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
.claude/: settings.local.json
backend/: .env  .env.example  Dockerfile  Makefile  alembic.ini  docker-compose.yml  features.md  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_exercises_and_training_log_fields.py  003_expand_metrics_columns.py  004_add_nutrition_macro_fields.py  005_add_user_configs.py  006_add_weekly_checkins.py  007_exercise_library_cache_and_favorites.py  008_plan_templates_and_copies.py  009_add_exercise_evidences.py  010_unify_evidences_table.py  011_add_monthly_reports.py  012_add_user_sessions.py  013_add_compound_unique_constraints.py  014_add_achievements.py  015_add_body_composition_fields.py  016_add_daily_wellness.py  fe94bf80af0c_fix_model_drift.py
backend/app/: dependencies.py  main.py  scheduler.py
backend/app/core/: config.py  datetime_utils.py  dependencies.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: achievement.py  attendance.py  client.py  daily_wellness.py  exercise.py  exercise_evidence.py  exercise_favorite.py  meal_log.py  metric.py  monthly_report.py  nutrition_plan.py  photo.py  progress_entry.py  training_log.py  training_plan.py  user.py  user_config.py  user_session.py  weekly_checkin.py
backend/app/routers/: attendance.py  auth.py  clients.py  evidences.py  exercise_evidences.py  exercises.py  meal_logs.py  photos.py  (+10 more)
backend/nginx/: nginx.conf
backend/scripts/: seed.py
(+84 files in other folders)
